tests/baselines/reference/jsdocParseMatchingBackticks.errors.txt
tests/cases/conformance/jsdoc/jsdocParseMatchingBackticks.js(22,22): error TS7006: Parameter 'gamma' implicitly has an 'any' type.


==== tests/cases/conformance/jsdoc/jsdocParseMatchingBackticks.js (1 errors) ====
    /**
     * `@param` initial at-param is OK in title comment
     * @param {string} x hi there `@param`
     * @param {string} y hi there @ * param
     *                   this is the margin
     *                   so we'll drop everything before it
     `@param` @param {string} z hello???
     * `@param` @param {string} alpha hello???
     * `@ * param` @param {string} beta hello???
     * @param {string} gamma
     */
    export function f(x, y, z, alpha, beta, gamma) {
        return x + y + z + alpha + beta + gamma
    }
    /**
     * Unmatched backticks keep going past newlines
     * @param {string} y hi there `@ * param
     *                   this is the margin
     *                   so we'll drop everything before it
     * @param {string} gamma
     */
    export function g(y, gamma) {
                         ~~~~~
!!! error TS7006: Parameter 'gamma' implicitly has an 'any' type.
        return y + gamma
    }
    